--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,5 +16,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json --emitDeclarationOnly && vite build",
     "test": "vitest run"
+  },
+  "dependencies": {
+    "svgson": "^5.3.1"
   }
 }
