--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,8 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "munkres-js": "^1.2.2",
+    "svg-path-bounds": "^1.0.2",
     "svgpath": "^2.6.0",
     "svgson": "^5.3.1"
   }
