--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"(demo) no tests\""
   },
   "dependencies": {
     "@svg-smart-animate/core": "0.0.0"
