--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
     "flubber": "^0.4.2",
     "munkres-js": "^1.2.2",
     "svg-path-bounds": "^1.0.2",
+    "svg-path-properties": "^2.0.0",
     "svgpath": "^2.6.0",
     "svgson": "^5.3.1"
   }
