--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "d3-interpolate-path": "^2.3.0",
     "flubber": "^0.4.2",
     "munkres-js": "^1.2.2",
     "svg-path-bounds": "^1.0.2",
