--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "d3-interpolate-path": "^2.3.0",
     "flubber": "^0.4.2",
+    "gsap": "^3.14.2",
     "munkres-js": "^1.2.2",
     "svg-path-bounds": "^1.0.2",
     "svg-path-properties": "^2.0.0",
