--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -9,6 +9,6 @@
     "test": "echo \"(demo) no tests\""
   },
   "dependencies": {
-    "@svg-smart-animate/core": "0.0.0"
+    "@marcodai/svg-smart-animate-core": "0.1.0"
   }
 }
