--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,11 @@
       "require": "./dist/index.cjs"
     }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "publishConfig": {
     "access": "public"
   },
